--- a/yytermi_react/Dockerfile
+++ b/yytermi_react/Dockerfile
@@ -1,24 +1,10 @@
-# Use Node.js as the base image
-FROM node:18-alpine
+# Build Stage
+FROM node:16
 
-# Set the working directory inside the container
 WORKDIR /app
 
-# Copy package.json and package-lock.json first (to leverage Docker layer caching)
 COPY package*.json ./
-
-# Install dependencies
 RUN npm install
 
-# Copy the rest of the application files
 COPY . .
-
-# Build the React app
 RUN npm run build
-
-# Expose the port your app will run on
-EXPOSE 3000
-
-
-# Serve the app using a lightweight HTTP server
-CMD ["npx", "serve", "-s", "build"]
