gpt shit head again

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,10 @@
-# Events block (mandatory)
 events {
     worker_connections 1024;
 }
 
-# HTTP block with MIME types and server configuration
 http {
-    include mime.types;  # Include standard MIME type definitions
-    default_type application/octet-stream; # Default MIME type fallback
+    include mime.types;
+    default_type application/octet-stream;
 
     # Redirect HTTP to HTTPS
     server {
@@ -30,13 +28,13 @@ http {
         ssl_certificate /etc/letsencrypt/live/yytermi.co.il/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/yytermi.co.il/privkey.pem;
 
-        # Serve React production build files
-        root /usr/share/nginx/html; # Path to React dist folder
-        index index.html;
-
-        # Handle React SPA routing
         location / {
-            try_files $uri /index.html;
+            proxy_pass http://react-app:3000; # Proxy React app container
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
 
         # Optional: Deny access to hidden files
