--- a/yytermi_react/Dockerfile
+++ b/yytermi_react/Dockerfile
@@ -1,10 +1,14 @@
-# Build Stage
-FROM node:16
+# Stage 1: Build the React app
+FROM node:16 as build
 
 WORKDIR /app
-
 COPY package*.json ./
 RUN npm install
-
 COPY . .
 RUN npm run build
+
+# Stage 2: Serve with NGINX
+FROM nginx:latest
+COPY --from=build /app/build /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
