--- a/yytermi_react/Dockerfile
+++ b/yytermi_react/Dockerfile
@@ -6,3 +6,15 @@ COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
+
+# Stage 2: Production image with NGINX
+FROM nginx:alpine
+
+# Copy the build files to the NGINX directory
+COPY --from=build /app/build /usr/share/nginx/html
+
+# Expose ports
+EXPOSE 80 443
+
+# Start NGINX
+CMD ["nginx", "-g", "daemon off;"]
